geode-cracker/src/index.css
:root{
  --background-color: #202020;
  --banner-background-dark-color: #2F3033;
  --banner-background-light-color: #3C3E42;
  --naturalis-red-color: #F93F35;
  --naturalis-green-color: #489F58;
  --error-color: #FA6B00;
  --inactive-red-color: #A5D7B9;
  --inactive-green-color: #B96560;
  --white-color: #FFFFFF;
  --black-color: #000000;
}

* {
  font-size: 62.5%;
  font-family: 'Akkurat';
  src: local('Akkurat'), url(./fonts/Akkurat.ttf), format('truetype');
}

*, *::before, *::after {
  margin: 0;
  padding: 0;
  font-weight: 100;
  text-decoration: none;
  list-style: none;
  box-sizing: border-box;
}

body {
  background-color: var(--background-color);
}

